# homework

./: .gitignore  README.md  versionPython.txt
.github/workflows/: pytest.yml  ruff.yml  webkit.yml
src/: CMakeLists.txt  birepresent.c  birepresent.h  bubble.py  cm_balance.c  cm_stack.c  cm_station.c  curry.py  dfs.py  different_palindrom.c  double.c  double.h  evklid.py  huffman.py  iosif.c  main.c  max_sum_num.c  monkey_sort.c  priority_queue.py  queen3_r.py  quenn1_r.py  quenn2_r.py  sortedlist.c  sortedlist.h  tests.c  tests.h
src/cm_balance/: CMakeLists.txt  cm_balance.c
src/cm_station/: CMakeLists.txt  cm_stack.c  cm_station.c
src/heap/: hsort.py  tests.py
src/homework1/: CMakeLists.txt
src/newpal/: CMakeLists.txt  main.c  palindrom.c  palindrom.h  tests.c
src/optimal_sort/: Makefile  README.md  functions.h  instuction.md  main.c  quicksort.c  quicksort.s
src/queens/: complexity.md  queen1.py  queen2.py  queen3.py
src/shift/: a.out  shift.c
src/stack/: balance.c  stack.c  stack.h  station.c
